fix variable contrast

--- a/css/base/variables.css
+++ b/css/base/variables.css
@@ -51,7 +51,7 @@
   --neutralDark: #2b2927;
   --neutralDarker: #2b2927;
 
-  --contrast: #47403a;
+  --contrast: #534d47;
   --contrastLight: #383533;
   --contrastLighter: #323d32;
 
